--- a/src/assets/iconfont.less
+++ b/src/assets/iconfont.less
@@ -1,11 +1,11 @@
 @charset "utf-8";
 
 @font-face {font-family: "iconfont";
-  src: url(./font/iconfont.eot?t=0.0.1); /* IE9*/
-  src: url(./font/iconfont.eot?t=0.0.1#iefix) format('embedded-opentype'), /* IE6-IE8 */
-  url(./font/iconfont.woff?t=0.0.1) format('woff'), /* chrome, firefox */
-  url(./font/iconfont.ttf?t=0.0.1) format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url(./font/iconfont.svg?t=0.0.1#iconfont) format('svg'); /* iOS 4.1- */
+  src: url(./iconfont/iconfont.eot?t=0.0.1); /* IE9*/
+  src: url(./iconfont/iconfont.eot?t=0.0.1#iefix) format('embedded-opentype'), /* IE6-IE8 */
+  url(./iconfont/iconfont.woff?t=0.0.1) format('woff'), /* chrome, firefox */
+  url(./iconfont/iconfont.ttf?t=0.0.1) format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url(./iconfont/iconfont.svg?t=0.0.1#iconfont) format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
